hw is updated, please check